[package]
name = "armstrong_number_test"
version = "0.1.0"
authors = ["Michele Sessa <michele@01talent.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
armstrong_number = { path = "../../solutions/armstrong_number"}
