[package]
name = "borrow_me_the_reference_test"
version = "0.1.0"
authors = ["lee <lee-dasilva@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meval = "0.2"
borrow_me_the_reference = { path = "../../solutions/borrow_me_the_reference"}
