[package]
name = "matrix_determinant_test"
version = "0.1.0"
authors = ["OGordoo <marcosafonso8@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix_determinant = {path = "../../solutions/matrix_determinant"}
