[package]
name = "matrix_transposition_4by3_test"
version = "0.1.0"
authors = ["Augusto <aug.ornelas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix_transposition_4by3 = { path = "../../solutions/matrix_transposition_4by3" }